# r1delta

./: .gitignore  .gitmodules  CMakeLists.txt  Dll1.sln  Dll1.vcxproj  Dll1.vcxproj.filters  END_USER_LICENSE_AGREEMENT.md  LICENSE.md  NetChanFixes.asm  README.md  SECURITY.md  TableDestroyer.cpp  TableDestroyer.h  appsystem.h  arena.cc  arena.cpp  arena.hh  audio.cpp  audio.h  audio_cache.cpp  audio_cache.h  audio_device.h  auth.cpp  auth.h  base.natvis  beardbgon.h  bitbuf.cpp  bitbuf.h  build.bat  chat.cpp  client.cpp  client.h  cmd.cpp  cmd.h  commands.cpp  compression.cpp  coordsize.h  core.h  crashhandler.cpp  crashhandler.h  (+118 more)
.github/workflows/: main.yml  msbuild.yml  wires.yml
client/: client.cpp  client.h  discord.cpp
client/audio/: audio_device.cpp
client/rendering/: surfacerender.h  vguisurface.h
cmake/: mingw64-toolchain.cmake
custom-triplets/: x64-windows-fix-cmake.cmake  x64-windows-fix-cmake.triplet
dedi_launch/: CMakeLists.txt  dedi_launch.filters  dedi_launch.rc  dedi_launch.vcxproj  main.cpp
engine/: auth.cpp  compression.cpp  compression.h  cvar.cpp  cvar.h  dedicated.cpp  mcp_server.cpp  precache.cpp  precache.h  security_fixes.cpp  vtable_tools.cpp
engine/core/: dllmain.cpp  factory.cpp  factory.h  load.cpp  load.h
engine/filesystem/: filecache.cpp  filecache.h  filesystem.cpp  filesystem.h
engine/hooks/: hooks.h  patcher.h
engine/logging/: crashhandler.cpp  logging.cpp  logging.h
engine/memory/: arena.h  memory.h  tctx.cpp
engine/net/: net_hooks.cpp  net_hooks.h  netchanwarnings.cpp  netchanwarnings.h  networking.cpp  networking.h
engine/vtable_remaps/: engine_vtable.cpp  engine_vtable.h  model_info_vtable.cpp  model_info_vtable.h
eos/: eos_layer.cpp  eos_layer.h  eos_logging_manager.h  eos_network.h
launch/: CMakeLists.txt  launcher.rc  launcher.vcxproj  launcher.vcxproj.filters  main.cpp  packages.config
launcher_ex/: App.config  App.xaml  App.xaml.cs  DarkTheme.xaml  FastDownloadService.cs  MainWindow.xaml  MainWindow.xaml.cs  SetupWindow.xaml  SetupWindow.xaml.cs  TitanfallFileList.cs  TitanfallFinder.cs  TitanfallManager.cs  UpdateProgressWindow.xaml  UpdateProgressWindow.xaml.cs  bitscleanup.cs  launcher_ex.csproj  packages.config
launcher_ex/Properties/: AssemblyInfo.cs
libs/: vstdlib.def  vstdlib.exp
overlays/ports/l8w8jwt/: CMakeLists.txt  fix-mbedtls-vcpkg.patch  portfile.cmake  usage  vcpkg.json
overlays/ports/mimalloc/: portfile.cmake
overlays/ports/minhook/: increase_initial_hook_capacity.patch  portfile.cmake  vcpkg.json
overlays/ports/rconpp/: portfile.cmake  vcpkg.json
sdk/: color.h  keyvalues.cpp
server/: chat.h  misc.cpp  misc.h  usermessages.h
server/ai/: bot.cpp  bot.h  navmesh.cpp
shared/: commands.h  persistentdata.cpp  persistentdata.h  squirrel.h
src/: TableDestroyer.cpp  arena.cc  audio.cpp  audio.h  client.cpp  client.h  compression.h  core.h  cvar.cpp  cvar.h  defs.h  dllmain.cpp  engine.cpp  engine.h  factory.cpp  factory.h  filesystem.cpp  filesystem.h  framework.h  hudwarp.cpp  hudwarp_hooks.cpp  keyvalues.cpp  load.cpp  load.h  logging.h  masterserver.cpp  masterserver.h  memory.cpp  memory.h  model_info.h  navmesh.cpp  navmesh.h  netadr.h  netchan_fix.asm  netchanwarnings.cpp  patcher.cpp  patcher.h  persistentdata.h  predictionerror.cpp  predictionerror.h  (+15 more)
src/dedi_launch/: main.cpp
src/dedicated/: CMakeLists.txt
src/launch/: CMakeLists.txt  main.cpp
src/launcher_ex/: App.xaml.cs  TitanfallManager.cs  UpdateProgressWindow.xaml  UpdateProgressWindow.xaml.cs  app.manifest  bitscleanup.cs  packages.config  redist.cs
src/launcher_ex/Properties/: Resources.Designer.cs  Settings.Designer.cs
vaudio_opus/: Dll2.vcxproj  Dll2.vcxproj.filters  voiceencoder_opus.cpp
vsdk/public/: bitvec.h  vector.h  vector2d.h
vsdk/public/minbase/: minbase_endian.h  minbase_identify.h
vsdk/public/tier0/: basetypes.h  dbg.h  platform.h  valve_tracelogging.h
vsdk/public/tier1/: fmtstr.h  utlblockmemory.h  utlbuffer.h  utldict.h  utlfixedmemory.h  utlmemory.h  utlrbtree.h  utlstring.h  utlvector.h
vsdk/public/vstdlib/: strtools.h
vsdk/tier0/: platformtime.cpp
vsdk/tier1/: utlbuffer.cpp
